# CareerScraper

./: .gitignore  CODE_REVIEW_FINDINGS.md  pyproject.toml
app/: main.py
app/matcher/: scorer.py
app/models/: job.py  match.py
app/parsers/: ashby.py  avature.py  generic.py  greenhouse.py  ibm.py  lever.py  oracle_hcm.py  universal.py  workday.py
app/scrapers/: ats_detector.py  careers_finder.py  description_enricher.py  fetcher.py  ibm_fetcher.py  pipeline.py  scroll_fetcher.py
frontend/: index.html
tests/: test_api.py  test_ats_detector.py  test_matcher.py  test_parsers.py  test_parsers_ashby_workday.py
