[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "careerscraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "scrapling>=0.2.9",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
